--- a/web/.htaccess
+++ b/web/.htaccess
@@ -2,6 +2,13 @@
 Action application/x-hg-php53 /cgi-sys/php53
 AddHandler application/x-hg-php53 .php 
 
+# use www.travelallmongolia.com
+<IfModule mod_rewrite.c>
+   RewriteCond %{HTTPS} !=on
+   RewriteCond %{HTTP_HOST} !^www\..+$ [NC]
+   RewriteRule ^ http://www.%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+</IfModule>
+ 
 # Force download pdf files
 <FilesMatch "\.pdf$">
 ForceType applicaton/octet-stream
